# grace

./: cabal.project
.github/workflows/: haskell.yml
grace/: grace.cabal
grace-configuration-default/: grace-configuration-default.cabal
grace-configuration-default/src/Grace/: Configuration.hs
grace-configuration-default/src/Grace/Resolver/: Builtin.hs
grace-configuration-default/tasty/: Main.hs
grace-core/: grace-core.cabal
grace-core/src/Grace/: Import.hs  Interpret.hs  Lexer.hs  Parser.hs
grace-interpreter/: grace-interpreter.cabal
grace-interpreter/src/Grace/: Configuration.hsig  Interpret.hs
grace-interpreter/tasty-configuration/Grace/: Configuration.hs
grace-resolver-builtin/: grace-resolver-builtin.cabal
grace-resolver-builtin/src/Grace/Resolver/: Builtin.hs
grace/src/Grace/: Repl.hs
