cabal-version:       2.0
name:                grace-interpreter
version:             1.0.0
license-file:        LICENSE
author:              Gabriel Gonzalez
maintainer:          Gabriel439@gmail.com
build-type:          Simple

tested-with:         GHC ==8.8.4 || ==8.10.7 || ==9.0.1 || ==9.2.0.20210821

library
  hs-source-dirs:      src
  build-depends:       base
                     , containers
                     , filepath
                     , generic-lens
                     , grace-core
                     , insert-ordered-containers
                     , lens
                     , modern-uri
                     , mtl
                     , prettyprinter
                     , prettyprinter-ansi-terminal
                     , safe-exceptions
                     , scientific
                     , string-interpolate
                     , template-haskell
                     , text
  exposed-modules:     Grace.Context
                     , Grace.Interpret
                     , Grace.Infer
                     , Grace.Normalize
                     , Grace.TH
  signatures:          Grace.Configuration
  default-language:    Haskell2010
  ghc-options:         -Wall

library grace-interpreter-tasty-configuration
  hs-source-dirs:      tasty-configuration
  build-depends:       base
                     , grace-core
  exposed-modules:     Grace.Configuration
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite tasty
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base
                     , directory
                     , filepath
                     , grace-core
                     , grace-interpreter
                     , grace-interpreter-tasty-configuration
                     , mtl
                     , prettyprinter
                     , tasty
                     , tasty-hunit
                     , tasty-silver
                     , text
  hs-source-dirs:      tasty
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite doctest
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base
                     , doctest
  hs-source-dirs:      doctest
  default-language:    Haskell2010
  ghc-options:         -Wall
